# blocksds-nix

./: README.md  flake.nix  update.sh
.github/workflows/: build.yml  update.yml
examples/cmake/: .gitignore  CMakeLists.txt  README.md  flake.nix
examples/cmake/src/: game_logic.c  game_logic.h
examples/cmake/src/linux/: main_linux.c
examples/cmake/src/nds/: main_nds.c
examples/simple/: .gitignore  Makefile  README.md  flake.nix
examples/simple/source/: main.c
sources/: blocksds-dev-amd64.json  blocksds-dev-arm64.json  blocksds-slim-amd64.json  blocksds-slim-arm64.json  blocksds-slim.json
